# rd6006

./: .gitignore  hatch.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create_release.yml
